# doc-test-submodule

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: main.yml
assets/stylesheets/: extra.css
cost_optimization/discovery_orphaned_idle_resources/: index.html
docs/: index.md
docs/assets/overrides/partials/: source-file.html
docs/cost_optimization/: discovery_orphaned_idle_resources.md
search/: search_index.json
