[project]
name = "podc-docs"
dynamic = ["version", "dependencies"]
description = "Documentation Repository for Pod C"
authors = [{name = "EE Pod C", email =  "ee-pod-c@rackspace.com"}]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13, <4.0"
boto3 = ">=1.26.89"
mkdocs = ">=1.5"
mkdocs-material = ">=9.0.11"
mkdocs-git-revision-date-localized-plugin = ">=1.1.0"
invoke = ">=2.0.0"
mkdocs-macros-plugin = ">=0.7.0"
mkdocs-git-authors-plugin = ">=0.7.2"
cfn-lint = ">=1.4.2"
mkdocs-awesome-nav = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=3.3.3"
poetry-plugin-export = ">=1.8"
pylint = "^3.3.4"
ruff = "^0.11.13"
flake8 = "^7.1.1"
flake8-bugbear = "^24.12.12"
flake8-builtins = "^2.5.0"
flake8-comprehensions = "^3.16.0"
flake8-docstrings = "^1.7.0"
flake8-eradicate = "^1.5.0"
flake8-isort = "^6.1.2"
flake8-print = "^5.0.0"
flake8-todos = "^0.3.1"
flake8-use-fstring = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
